main setup is finished

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,28 +7,26 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="top_header_container">
-      <div class="logo"></div>
-      <h1>My Weather App</h1>
-    </div>
-
     <div class="main_container">
-      <header class="header">
-        <div class="search_bar_container">
-          <form action="" class="form">
-            <input
-              type="text"
-              name="city"
-              id="city_search"
-              class="city_search"
-              placeholder="Enter your city name"
-            />
-            <button class="submit_city">
-              <img src="../images/icons/search_icon.png" alt="search icon" />
-            </button>
-          </form>
-        </div>
-      </header>
+      <div class="top_header_container">
+        <header class="header">
+          <div class="search_bar_container">
+            <form action="" class="form">
+              <input
+                type="text"
+                name="city"
+                id="city_search"
+                class="city_search"
+                placeholder="Enter your city name"
+              />
+              <button class="submit_city">
+                <img src="../images/icons/search_icon.png" alt="search icon" />
+              </button>
+            </form>
+          </div>
+        </header>
+      </div>
+
       <div class="content_main_container">
         <div class="current_day_top_container">
           <div class="current_day_location">XX*Amsterdam, Netherlands</div>
@@ -109,6 +107,14 @@
           </div>
         </div>
       </div>
+
+      <footer>
+        Here I practiced&nbsp;<em>fetching</em>&nbsp;data from&nbsp;
+        <em>APIs</em>&nbsp;
+        <a href="https://github.com/berkgirgin/Weather_App"
+          ><img src="../images/icons/github-64.png" alt="git repo"
+        /></a>
+      </footer>
     </div>
   </body>
 </html>
